--- a/Laundry/.gitignore
+++ b/Laundry/.gitignore
@@ -1,3 +1,4 @@
+# Ignore Android Studio and Gradle-related files
 *.iml
 .gradle
 /local.properties
@@ -13,3 +14,9 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Ignore "System Volume Information"
+System Volume Information/
+
+# Ignore all files and folders outside the project folder
+../*
