update pada .gitignore reupload

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-/alsbitessolo/
-/belajar1/
+# Ignore Android Studio and Gradle-related files
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
+# Ignore "System Volume Information"
+System Volume Information/
+
+# Ignore all files and folders outside the project folder
+../*
