--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,30 @@
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
         <activity
+            android:name=".tambahan.DataTambahan"
+            android:exported="false" />
+        <activity
+            android:name=".pegawai.DataPegawai"
+            android:exported="false" />
+        <activity
+            android:name=".layanan.DataLayanan"
+            android:exported="false" />
+        <activity
+            android:name=".cabang.DataCabang"
+            android:exported="false" />
+        <activity
+            android:name=".tambahan.TambahTambahan"
+            android:exported="false" />
+        <activity
+            android:name=".layanan.TambahLayanan"
+            android:exported="false" />
+        <activity
+            android:name=".cabang.TambahCabang"
+            android:exported="false" />
+        <activity
+            android:name=".pegawai.tambah_pegawai"
+            android:exported="false" />
+        <activity
             android:name=".pelanggan.TambahPelanggan"
             android:exported="false" />
         <activity
