--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
+        <activity
+            android:name=".transaksi.NotaTransaksi"
+            android:exported="false" />
+        <activity
+            android:name=".transaksi.KonfirmasiTransaksi"
+            android:exported="false" />
+        <activity
+            android:name=".tambahan.PilihTambahan"
+            android:exported="false" />
+        <activity
+            android:name=".layanan.PilihLayanan"
+            android:exported="false" />
+        <activity
+            android:name=".pelanggan.PilihPelanggan"
+            android:exported="false" />
+        <activity
+            android:name=".PilihPelanggan"
+            android:exported="false" />
+        <activity
+            android:name=".transaksi.transaksi"
+            android:exported="false" />
+        <activity
+            android:name=".login.Login"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".laporan.DataLaporan"
+            android:exported="false" />
+        <activity
+            android:name=".cabang.DataLaporan"
+            android:exported="false" />
         <activity
             android:name=".tambahan.DataTambahan"
             android:exported="false" />
